--- a/styles/style.css
+++ b/styles/style.css
@@ -17,14 +17,18 @@ body {
 }
 
 h1 {
+    text-align: center;
     padding: 1rem;
     border-radius: 5px;
-    color: rgb(255, 255, 255);
+    color: white;
     font-size: 4.6rem;
     margin: 0 0 70px 0;
     background-color: rgba(0, 0, 0, 0.4);
     text-shadow: 0 0 5px black;
     text-wrap: nowrap;
+}
+.icon{
+    width: ;
 }
 
 .keys {
@@ -47,7 +51,7 @@ h1 {
     text-shadow: 0 0 5px black;
     min-width: 130px;
     font-size: 1.5rem;
-    transition: all 0.08s;
+    transition: all 0.6s;
 }
 
 .play {
@@ -60,7 +64,6 @@ kbd {
     font-family: 'Courier New', Courier, monospace;
     font-weight: 600;
     font-size: 40px;
-    /* display: block; */
 }
 
 .sound {
