--- a/styles/style.css
+++ b/styles/style.css
@@ -27,9 +27,6 @@ h1 {
     text-shadow: 0 0 5px black;
     text-wrap: nowrap;
 }
-.icon{
-    width: ;
-}
 
 .keys {
     display: flex;
@@ -51,7 +48,7 @@ h1 {
     text-shadow: 0 0 5px black;
     min-width: 130px;
     font-size: 1.5rem;
-    transition: all 0.6s;
+    transition: all .07s;
 }
 
 .play {
